DUnion.GeneratorTests/TestCases/SubTyped/Valid/NestedInClass.source.cs
using DUnion;

namespace SubTyped.Valid.NestedInClass;

public partial class Container 
{
    [DUnion(Kind = UnionKind.SubType)]
    public partial record class Union 
    {
        public partial record class Case();
    }
}